added security module... started login logic over. i overcame my laziness

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ Flask==3.0.3        #Core of our backend
 psycopg2==2.9.9     #For database communication
 uuid==1.30          #For some unique strings
 cloudinary==1.41.0  #For cloud communication
-Werkzeug==3.0.4     #Temp. hashing functions
+argon2-cffi==23.1.0    #hashing and security
